000pavandemo/ingress-svc/ingress.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress-svc-app1-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ingress-svc-app1
  template:
    metadata:
      labels:
        app: ingress-svc-app1
    spec:
      containers:
      - name: app1
        image: stacksimplify/kube-nginxapp1:1.0.0
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: app1clusterip
spec:
  selector:
    app: ingress-svc-app1
  ports:
  - port: 80
    targetPort: 80

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app1-ingress-svc
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: app1clusterip
            port: 
              number: 80
